--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,48 +18,48 @@
 @import 'general/mixins';
 
 // Web
-@import 'web/web3';
-@import 'web/layout';
-@import 'web/navbar';
-@import 'web/report';
-@import 'web/notfound';
-@import 'web/howtobuy';
-@import 'web/countdown';
-@import 'web/blacklist';
-@import 'web/contentcreators';
-@import 'web/index-coin';
-@import 'web/index-ecosystem';
-@import 'web/referral';
-@import 'web/scanner';
-@import 'web/marketplace';
-@import 'web/gaming';
-@import 'web/stat';
-@import 'web/academy';
-@import 'web/courses';
-@import 'web/staking';
+@import 'WEB/web3';
+@import 'WEB/layout';
+@import 'WEB/navbar';
+@import 'WEB/report';
+@import 'WEB/notfound';
+@import 'WEB/howtobuy';
+@import 'WEB/countdown';
+@import 'WEB/blacklist';
+@import 'WEB/contentcreators';
+@import 'WEB/index-coin';
+@import 'WEB/index-ecosystem';
+@import 'WEB/referral';
+@import 'WEB/scanner';
+@import 'WEB/marketplace';
+@import 'WEB/gaming';
+@import 'WEB/stat';
+@import 'WEB/academy';
+@import 'WEB/courses';
+@import 'WEB/staking';
 
 // Scan DeFi
-@import 'scan/raised-bnb';
-@import 'scan/transaction-checker';
-@import 'scan/media-card';
-@import 'scan/search-box';
-@import 'scan/searched-token-card';
-@import 'scan/coin-card';
-@import 'scan/fireflies';
-@import 'scan/modal';
-@import 'scan/tokenomics-card';
-@import 'scan/team-card';
-@import 'scan/referral-table';
-@import 'scan/ranking-table';
-@import 'scan/footer';
-@import 'scan/buy-modal-form';
-@import 'scan/language';
-@import 'scan/alert';
-@import 'scan/comments';
-@import 'scan/twitter';
-@import 'scan/swap';
+@import 'SCAN/raised-bnb';
+@import 'SCAN/transaction-checker';
+@import 'SCAN/media-card';
+@import 'SCAN/search-box';
+@import 'SCAN/searched-token-card';
+@import 'SCAN/coin-card';
+@import 'SCAN/fireflies';
+@import 'SCAN/modal';
+@import 'SCAN/tokenomics-card';
+@import 'SCAN/team-card';
+@import 'SCAN/referral-table';
+@import 'SCAN/ranking-table';
+@import 'SCAN/footer';
+@import 'SCAN/buy-modal-form';
+@import 'SCAN/language';
+@import 'SCAN/alert';
+@import 'SCAN/comments';
+@import 'SCAN/twitter';
+@import 'SCAN/swap';
 
 // Classroom
-@import 'classroom/lesson';
-@import 'classroom/notes';
+@import 'CLASSROOM/lesson';
+@import 'CLASSROOM/notes';
 
